--- a/webapp/templates/signup.html
+++ b/webapp/templates/signup.html
@@ -2,4 +2,43 @@
  
 {% block content %}
    <p>Sign up page</p>
+
+<form class="form-horizontal" role="form">
+<!-- First name -->
+   <div class="form-group">
+      <label for="firstname" class="col-sm-2 control-label">First Name</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control" id="firstname" placeholder="Enter First Name">
+      </div>
+   </div>
+<!-- Last name -->
+   <div class="form-group">
+      <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+      <div class="col-sm-10">
+         <input type="text" class="form-control" id="lastname" placeholder="Enter Last Name">
+      </div>
+   </div>
+<!-- Email -->
+   <div class="form-group">
+     <label for="email" class="col-sm-2 control-label">Email</label>
+     <div class="col-sm-10">
+       <input type="text" class="form-control" id="email" placeholder="Enter email">
+     </div>
+   </div>
+<!-- Password -->
+   <div class="form-group">
+     <label for="pwd" class="col-sm-2 control-label">Password</label>
+     <div class="col-sm-10">
+       <input type="password" class="form-control" id="password" placeholder="Enter password">
+     </div>
+   </div>
+<!-- Sign up button -->   
+   <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+         <button type="submit" class="btn btn-default">Sign up</button>
+      </div>
+   </div>
+</form>
+
+
 {% endblock %}
