--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -27,8 +27,13 @@
             <ul class="nav navbar-nav">
               <li><a href="{{ url_for('about') }}">About</a></li>
               <li><a href="{{ url_for('courses') }}">Courses</a></li>
-              <li><a href="{{ url_for('signup') }}">Sign up</a></li>
-              <li><a href="{{ url_for('login') }}">Log in</a></li>
+              {% if 'email' in session %}
+              <li><a href="{{ url_for('profile') }}">Profile</a></li>
+              <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
+              {% else %}
+              <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+              <li><a href="{{ url_for('login') }}">Log In</a></li>
+              {% endif %}          
             </ul>
         </div>
     </nav>
