--- a/webapp/templates/signup_bootstrap.html
+++ b/webapp/templates/signup_bootstrap.html
@@ -5,7 +5,7 @@
 <!-- Sign up page with Twitter Bootstrap.
      Not connected to any form or database -->
 
-   <h3>Sign up page (Bootstrap)</h3>
+   <h3>Sign up</h3>
 
 <form class="form-horizontal" role="form" action="{{url_for('signup')}}" method="POST">
     {{ form.hidden_tag() }}
