--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "main.html" %}
 
 {% block content %}
-   <p>Landing page / Home</p>
+   <p>Landing page / bobby olsen</p>
 {% endblock %}
