--- a/webapp/templates/login_bootstrap.html
+++ b/webapp/templates/login_bootstrap.html
@@ -4,7 +4,7 @@
 <!-- Log in page with Twitter Bootstrap.
      Not connected to a database. -->
 
-   <h3>Log in page (Bootstrap)</h3>
+   <h3>Log in</h3>
 
 <form class="form-horizontal" role="form" action="{{url_for('login')}}" method="POST">
     {{ form.hidden_tag() }}
@@ -16,7 +16,11 @@
       {{ form.email(placeholder="Enter your email", class="form-control") }}
     </div>
     <p class="col-sm-4 help-block">
-    {{ form.email.errors[0] }}
+    {% if form.email.errors[0] %}
+    <!-- {{ form.email.errors[0] }} -->
+    Dansk fejlbesked.
+    {% endif %}
+    
   </div>
 
   <!-- Password --> 
