--- a/webapp/templates/login_bootstrap.html
+++ b/webapp/templates/login_bootstrap.html
@@ -36,7 +36,7 @@
   <!-- submit button -->
   <div class="form-group">
     <div class="col-sm-offset-4 col-sm-8">
-      <button type="submit" class="btn btn-success">Submit</button>
+      <button type="submit" class="btn btn-success">Log in</button>
     </div>
   </div>
 </form>
